{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 110,
  "lineage": "c50ae02f-4635-f378-6fc0-1fb1a004b0e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c138e9dbe2897464",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-03e908436b084d055",
            "domain": "vpc",
            "id": "eipalloc-0c138e9dbe2897464",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-057a54ef6a948fb14",
            "private_dns": "ip-10-0-1-50.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-239-105-254.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.105.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.fuel50-gw",
            "aws_network_interface.web-server",
            "aws_subnet.fuel50-vpc-public-1",
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "fuel50-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:385083667383:loadbalancer/fuel50-elb",
            "availability_zones": [
              "ap-southeast-2a",
              "ap-southeast-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "fuel50-elb-1205185195.ap-southeast-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "fuel50-elb",
            "idle_timeout": 60,
            "instances": [
              "i-02d81d12d67895271"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "fuel50-elb",
            "security_groups": [
              "sg-0c377bc76c1f27432"
            ],
            "source_security_group": "385083667383/fuel50-elb-sg",
            "source_security_group_id": "sg-0c377bc76c1f27432",
            "subnets": [
              "subnet-0b815bc23c5f29107",
              "subnet-0dd30f13971c4bfed"
            ],
            "tags": {
              "name": "fuel50-elb"
            },
            "tags_all": {
              "name": "fuel50-elb"
            },
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_instance.fuel50-instance-1",
            "aws_network_interface.web-server",
            "aws_security_group.fuel50-elb-sg",
            "aws_subnet.fuel50-vpc-public-1",
            "aws_subnet.fuel50-vpc-public-2",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fuel50-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055fb06a016ba89f0",
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:instance/i-02d81d12d67895271",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d81d12d67895271",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-057a54ef6a948fb14"
              }
            ],
            "primary_network_interface_id": "eni-057a54ef6a948fb14",
            "private_dns": "ip-10-0-1-50.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-239-105-254.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.105.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2ac0e4be2026ec7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b815bc23c5f29107",
            "tags": {
              "Name": "fuel50-instance-1"
            },
            "tags_all": {
              "Name": "fuel50-instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04e2879422d6ab5a1"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fuel50-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:internet-gateway/igw-043254094303ed195",
            "id": "igw-043254094303ed195",
            "owner_id": "385083667383",
            "tags": {
              "Name": "fuel50-gw"
            },
            "tags_all": {
              "Name": "fuel50-gw"
            },
            "vpc_id": "vpc-0cabc51e3ce4317fe"
          },
          "dependencies": [
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:network-interface/eni-057a54ef6a948fb14",
            "id": "eni-057a54ef6a948fb14",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c0:27:98:dc:48",
            "owner_id": "385083667383",
            "private_dns_name": "ip-10-0-1-50.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04e2879422d6ab5a1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b815bc23c5f29107"
          },
          "dependencies": [
            "aws_subnet.fuel50-vpc-public-1",
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fuel50-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:route-table/rtb-0b2969cc5a3df80b8",
            "id": "rtb-0b2969cc5a3df80b8",
            "owner_id": "385083667383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043254094303ed195",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043254094303ed195",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cabc51e3ce4317fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fuel50-gw",
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fuel50-vpc-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0689bc075f8e5b",
            "route_table_id": "rtb-0b2969cc5a3df80b8",
            "subnet_id": "subnet-0b815bc23c5f29107"
          },
          "dependencies": [
            "aws_internet_gateway.fuel50-gw",
            "aws_route_table.fuel50-rt",
            "aws_subnet.fuel50-vpc-public-1",
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fuel50-vpc-public-2-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee5a01fa859d8e5f",
            "route_table_id": "rtb-0b2969cc5a3df80b8",
            "subnet_id": "subnet-0dd30f13971c4bfed"
          },
          "dependencies": [
            "aws_internet_gateway.fuel50-gw",
            "aws_route_table.fuel50-rt",
            "aws_subnet.fuel50-vpc-public-2",
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fuel50-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:security-group/sg-067d91a74cad8ed6d",
            "description": "security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067d91a74cad8ed6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c377bc76c1f27432"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fuel50-ec2-sg",
            "name_prefix": "",
            "owner_id": "385083667383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fuel50-ec2-sg"
            },
            "tags_all": {
              "Name": "fuel50-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cabc51e3ce4317fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fuel50-elb-sg",
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fuel50-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:security-group/sg-0c377bc76c1f27432",
            "description": "security group for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c377bc76c1f27432",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fuel50-elb-sg",
            "name_prefix": "",
            "owner_id": "385083667383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fuel50-elb-sg"
            },
            "tags_all": {
              "Name": "fuel50-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cabc51e3ce4317fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fuel50-vpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:subnet/subnet-0b815bc23c5f29107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b815bc23c5f29107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385083667383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "fuel50-vpc-public-1"
            },
            "tags_all": {
              "name": "fuel50-vpc-public-1"
            },
            "vpc_id": "vpc-0cabc51e3ce4317fe"
          },
          "dependencies": [
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fuel50-vpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:subnet/subnet-0dd30f13971c4bfed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd30f13971c4bfed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385083667383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "fuel50-vpc-public-2"
            },
            "tags_all": {
              "name": "fuel50-vpc-public-2"
            },
            "vpc_id": "vpc-0cabc51e3ce4317fe"
          },
          "dependencies": [
            "aws_vpc.fuel50-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fuel50-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:385083667383:vpc/vpc-0cabc51e3ce4317fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012388db9d6b33440",
            "default_route_table_id": "rtb-0edcd449afc2648c9",
            "default_security_group_id": "sg-04e2879422d6ab5a1",
            "dhcp_options_id": "dopt-0f5d069e08d04f532",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cabc51e3ce4317fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0edcd449afc2648c9",
            "owner_id": "385083667383",
            "tags": {
              "Name": "fuel50-vpc"
            },
            "tags_all": {
              "Name": "fuel50-vpc"
            }
          }
        }
      ]
    }
  ]
}